--- a/lang/fr.lang
+++ b/lang/fr.lang
@@ -1,30 +1,30 @@
 {
 	"install.welcome.title": "Bienvenue sur Imnicore %version%!",
-	"install.welcome.text1": "Bienvenue sur l'interface d'installation d'Imnicore. Imnicore est un outil pour les développeurs afin de faciliter la création de leur site.",
-	"install.welcome.text2": "Ceci n'est en aucun cas un CMS, ni rien qui ne soit utilisable directement. C'est juste une base pour vous faciliter la vie et commencer directement à développer.",
+	"install.welcome.text1": "Bienvenue sur l'interface d'installation d'Imnicore. Imnicore est un outil pour les dÃ©veloppeurs afin de faciliter la crÃ©ation de leur site.",
+	"install.welcome.text2": "Ceci n'est en aucun cas un CMS, ni rien qui ne soit utilisable directement. C'est juste une base pour vous faciliter la vie et commencer directement Ã  dÃ©velopper.",
 	"install.welcome.text3": "Cliquez sur le bouton ci-dessous pour commencer l'installation.",
-	"install.database.title": "Configuration de la base de données",
-	"install.database.text": "Imnicore a besoin des informations de votre base de données pour commencer. Veuillez les écrire ci-dessous",
-	"install.database.host": "Hôte",
+	"install.database.title": "Configuration de la base de donnÃ©es",
+	"install.database.text": "Imnicore a besoin des informations de votre base de donnÃ©es pour commencer. Veuillez les Ã©crire ci-dessous",
+	"install.database.host": "HÃ´te",
 	"install.database.user": "Utilisateur",
 	"install.database.password": "Mot de passe",
-	"install.database.name": "Base de données",
-	"form.error.empty": "Tous les champs doivent être remplis.",
+	"install.database.name": "Base de donnÃ©es",
+	"form.error.empty": "Tous les champs doivent Ãªtre remplis.",
 	"install.database.error.pdo": "ERREUR PDO: ",
-	"install.default.title": "Configuration par défaut",
-	"install.default.text": "Quelques dernières précisions avant de pouvoir commencer à utiliser Imnicore.",
+	"install.default.title": "Configuration par dÃ©faut",
+	"install.default.text": "Quelques derniÃ¨res prÃ©cisions avant de pouvoir commencer Ã  utiliser Imnicore.",
 	"install.default.url": "URL du site",
-	"install.done.title": "Installation terminée!",
-	"install.done.text1": "L'installation s'est déroulée avec succès! Vous pouvez maintenant commencer à utiliser Imnicore.",
-	"install.done.text2": "Cliquez sur le bouton ci-dessous pour supprimer les fichiers d'installation."
+	"install.done.title": "Installation terminÃ©e!",
+	"install.done.text1": "L'installation s'est dÃ©roulÃ©e avec succÃ¨s! Vous pouvez maintenant commencer Ã  utiliser Imnicore.",
+	"install.done.text2": "Cliquez sur le bouton ci-dessous pour supprimer les fichiers d'installation.",
 	"install.done.remove": "Supprimer",
 	"done": "Valider",
 	"begin": "Commencer",
-	"register.error.username.length": "Votre pseudo doit faire entre %min% et %max% caractères.",
-	"register.error.username.exists": "Votre pseudo est déjà pris.",
-	"register.error.password.length": "Votre mot de passe doit faire entre %min% et %max% caractères.",
-	"register.error.password.equal": "Vos mots de passes ne sont pas égaux.",
+	"register.error.username.length": "Votre pseudo doit faire entre %min% et %max% caractÃ¨res.",
+	"register.error.username.exists": "Votre pseudo est dÃ©jÃ  pris.",
+	"register.error.password.length": "Votre mot de passe doit faire entre %min% et %max% caractÃ¨res.",
+	"register.error.password.equal": "Vos mots de passes ne sont pas Ã©gaux.",
 	"register.error.email.invalid": "Votre adresse email est invalide.",
-	"register.error.email.exists": "Votre adresse email est déjà utilisée.",
+	"register.error.email.exists": "Votre adresse email est dÃ©jÃ  utilisÃ©e.",
 	"login.error.invalid": "Pseudo ou mot de passe incorrect."
 }
