--- a/lang/fr.lang
+++ b/lang/fr.lang
@@ -9,8 +9,9 @@
 	"install.database.user": "Utilisateur",
 	"install.database.password": "Mot de passe",
 	"install.database.name": "Base de données",
+	"install.error.unknown.step": "Étape invalide",
 	"form.error.empty": "Tous les champs doivent être remplis.",
-	"install.database.error.pdo": "ERREUR PDO: ",
+	"install.database.error.pdo": "ERREUR PDO: %error%",
 	"install.default.title": "Configuration par défaut",
 	"install.default.text": "Quelques dernières précisions avant de pouvoir commencer à utiliser Imnicore.",
 	"install.default.url": "URL du site",
@@ -20,11 +21,12 @@
 	"install.done.remove": "Supprimer",
 	"done": "Valider",
 	"begin": "Commencer",
+	"setup": "Installation",
 	"register.error.username.length": "Votre pseudo doit faire entre %min% et %max% caractères.",
 	"register.error.username.exists": "Votre pseudo est déjà pris.",
 	"register.error.password.length": "Votre mot de passe doit faire entre %min% et %max% caractères.",
 	"register.error.password.equal": "Vos mots de passes ne sont pas égaux.",
 	"register.error.email.invalid": "Votre adresse email est invalide.",
-	"register.error.email.exists": "Votre adresse email est déjà utilisée.",
+	"register.error.email.exists": "Votre adresse email est déjà  utilisée.",
 	"login.error.invalid": "Pseudo ou mot de passe incorrect."
 }
