--- a/lang/fr.lang
+++ b/lang/fr.lang
@@ -17,10 +17,13 @@
 	"install.default.url": "URL du site",
 	"install.default.sitename": "Nom du site",
 	"install.default.lang": "Langue par défaut",
+	"install.default.users.table": "Table des utilisateurs",
+	"install.default.table.exists": "Existe déjà?",
 	"install.done.title": "Installation terminée!",
 	"install.done.text1": "L'installation s'est déroulée avec succès! Vous pouvez maintenant commencer à utiliser Imnicore.",
-	"install.done.text2": "Cliquez sur le bouton ci-dessous pour supprimer les fichiers d'installation. C'est très important pour la sécurité de votre site.",
-	"install.done.remove": "Supprimer",
+	"install.done.text2": "Cliquez sur le bouton ci-dessous pour aller sur l'index.",
+	"install.done.text3": "Nous vous conseillons de supprimer les dossiers \"imnicore\" présents dans les dossiers \"controller\", \"view\" et \"css\".",
+	"install.done": "Terminé",
 	"done": "Valider",
 	"begin": "Commencer",
 	"setup": "Installation",
