--- a/lang/fr.lang
+++ b/lang/fr.lang
@@ -3,6 +3,7 @@
 	"install.welcome.text1": "Bienvenue sur l'interface d'installation d'Imnicore. Imnicore est un outil pour les développeurs afin de faciliter la création de leur site.",
 	"install.welcome.text2": "Ceci n'est en aucun cas un CMS, ni rien qui ne soit utilisable directement. C'est juste une base pour vous faciliter la vie et commencer directement à développer.",
 	"install.welcome.text3": "Cliquez sur le bouton ci-dessous pour commencer l'installation.",
+	"install.welcome.change.language": "Changer de langue",
 	"install.database.title": "Configuration de la base de données",
 	"install.database.text": "Imnicore a besoin des informations de votre base de données pour commencer. Veuillez les écrire ci-dessous",
 	"install.database.host": "Hôte",
